--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+INLABS_CREDENTIAL_EMAIL=
+INLABS_CREDENTIAL_PASSWORD=
+INLABS_BASE_URL=https://inlabs.in.gov.br
