add: readme goals add: dou service helpers fix: login cache fix: download cache

--- a/.env.example
+++ b/.env.example
@@ -53,4 +53,5 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 INLABS_CREDENTIAL_EMAIL=
 INLABS_CREDENTIAL_PASSWORD=
+INLABS_COOKIE_CACHE_TIME=
 INLABS_BASE_URL=https://inlabs.in.gov.br
