--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,15 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
+        "ext-libxml": "*",
+        "ext-simplexml": "*",
+        "ext-zip": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "ext-curl": "*",
-        "ext-libxml": "*",
-        "ext-simplexml": "*",
-        "ext-zip": "*"
+        "voku/simple_html_dom": "^4.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
